bdr.BDR.scala.error
Erreur de compilation :
BDR:5: error: not found: value litMesage
  if(litMesage()=="R")
     ^BDR:10: error: not found: value litMesage
  else if(litMesage()=="L")
          ^BDR:15: error: not found: value litMesage
  else if(litMesage()=="I")
          ^BDR:20: error: not found: value litMesage
  else if(litMesage()=="A")
          ^BDR:24: error: not found: value litMesage
    else if(litMesage()=="B")
            ^BDR:29: error: not found: value litMesage
    else if(litMesage()=="C")
            ^BDR:35: error: not found: value litMesage
    else if(litMesage()=="Z")
            ^BDR:39: error: not found: value litMesage
      else if(litMesage()=="Y")
              ^BDR:44: error: not found: value litMesage
      else if(litMesage()=="X")
              ^