bdr.BDR.scala.code
var fin=false

while(fin==false)
{
  if(litMesage()=="R")
  {
    droite()
    avance()
  }
  else if(litMesage()=="L")
  {
    gauche()
  	avance()
  }
  else if(litMesage()=="I")
  {
    retourne()
    avance
  }
  else if(litMesage()=="A")
  {
    avance()
  }
    else if(litMesage()=="B")
  {
    avance()
    avance()
  }
    else if(litMesage()=="C")
  {
    avance()
    avance()
    avance()
  }
    else if(litMesage()=="Z")
  {
    recule()
  }
      else if(litMesage()=="Y")
  {
    recule()
    recule()
  }
      else if(litMesage()=="X")
  {
    recule()
    recule()
    recule()
  }
  else
  {
    fin=true
  }
}
fin=false